validation nâng cao áp dung cho tất cả. và chính sửa trong message để thêm thẳng vào giá trị của messageError